Révision de l'intégration du développement local pour correspondre à la nouvelle conception des composants du projet suite aux récentes mises à jour sur DSpace.

--- a/src/themes/calypso/app/collection-page/vedette-coll-liste/vedette-coll-liste.component.html
+++ b/src/themes/calypso/app/collection-page/vedette-coll-liste/vedette-coll-liste.component.html
@@ -10,4 +10,5 @@
     </div>
   </div>
   </div>
+  <ds-themed-loading *ngIf="!(images.length > 0)" message="Loading ..."></ds-themed-loading>
 </ng-container>
