Des modifications ont été apportées pour mettre à jour les sources avec le dépôt distant dspace-angular.

--- a/src/themes/calypso/app/collection-page/vedette-coll-liste/vedette-coll-liste.component.html
+++ b/src/themes/calypso/app/collection-page/vedette-coll-liste/vedette-coll-liste.component.html
@@ -10,5 +10,5 @@
     </div>
   </div>
   </div>
-  <ds-themed-loading *ngIf="!(images.length > 0)" message="Loading ..."></ds-themed-loading>
+  <ds-loading *ngIf="!(images.length > 0)" message="Loading ..."></ds-loading>
 </ng-container>
