--- a/src/themes/calypso/app/home-page/vedette-liste/vedette-liste.component.html
+++ b/src/themes/calypso/app/home-page/vedette-liste/vedette-liste.component.html
@@ -8,5 +8,5 @@
       </div>
     </ng-template>
   </ngb-carousel>
-  <ds-themed-loading *ngIf="!(images.length > 0)" message="Loading carousel..."></ds-themed-loading>
+  <ds-loading *ngIf="!(images.length > 0)" message="Loading carousel..."></ds-loading>
 </ng-container>
