--- a/src/themes/calypso/app/home-page/home-page.component.html
+++ b/src/themes/calypso/app/home-page/home-page.component.html
@@ -1,19 +1,28 @@
-<ds-themed-home-news></ds-themed-home-news>
+<ds-home-coar></ds-home-coar>
+<ds-home-news></ds-home-news>
 <ds-vedette-liste></ds-vedette-liste>
-<div [ngClass]="appConfig.homePage.showDiscoverFilters ? 'container-fluid' : 'container'">
-  <div class="row m-5">
-    <div class="col-sm-3" *ngIf="appConfig.homePage.showDiscoverFilters">
-      <ds-configuration-search-page [sideBarWidth]="12" [showViewModes]="false" [searchEnabled]="false"
-                                    [inPlaceSearch]="false" [showScopeSelector]="false"></ds-configuration-search-page>
-    </div>
-    <div [ngClass]="appConfig.homePage.showDiscoverFilters ? 'col-sm-9' : 'col-sm-12'">
-      <ng-container *ngIf="(site$ | async) as site">
-        <ds-view-tracker [object]="site"></ds-view-tracker>
-      </ng-container>
-      <ds-themed-search-form [inPlaceSearch]="false"
-                             [searchPlaceholder]="'home.search-form.placeholder' | translate"></ds-themed-search-form>
-      <ds-themed-top-level-community-list></ds-themed-top-level-community-list>
-    </div>
-  </div>
+<ds-configuration-search-page *ngIf="showDiscoverFilters"
+                              [sideBarWidth]="3"
+                              [showViewModes]="false"
+                              [searchEnabled]="false"
+                              [inPlaceSearch]="false"
+                              [showScopeSelector]="false">
+  <ng-container searchContentTop *ngTemplateOutlet="homeContent"></ng-container>
+</ds-configuration-search-page>
+<div *ngIf="!showDiscoverFilters" class="container">
+  <ng-container *ngTemplateOutlet="homeContent"></ng-container>
+</div>
+<div class="container">
+  <ds-top-level-community-list></ds-top-level-community-list>
 </div>
 <ds-suggestions-popup></ds-suggestions-popup>
+
+<ng-template #homeContent>
+  <ng-container *ngIf="(site$ | async) as site">
+    <ds-view-tracker [object]="site"></ds-view-tracker>
+  </ng-container>
+  <ds-search-form [inPlaceSearch]="false"
+                  [searchPlaceholder]="'home.search-form.placeholder' | translate">
+  </ds-search-form>
+</ng-template>
+
