Ajout d'un lien dans le menu principale pour la page feedback avec les infos de contact

--- a/src/themes/calypso/pages/pages.component.html
+++ b/src/themes/calypso/pages/pages.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="currentComponent">
+  <ng-container *ngComponentOutlet="currentComponent"></ng-container>
+</div>
 <p>pages works!</p>
-<ds-page1 *ngIf="page1"></ds-page1>
-<ds-page2 *ngIf="page2"></ds-page2>
