--- a/src/themes/calypso/app/collection-page/collection-page.component.html
+++ b/src/themes/calypso/app/collection-page/collection-page.component.html
@@ -58,12 +58,8 @@
     </div>
     <ds-error *ngIf="collectionRD?.hasFailed"
               message="{{'error.collection' | translate}}"></ds-error>
-    <ds-loading *ngIf="collectionRD?.isLoading"
-<<<<<<< HEAD
-                       message="{{'loading.collection' | translate}}"></ds-loading>
-=======
-                message="{{'loading.collection' | translate}}"></ds-loading>
->>>>>>> main
+    <ds-loading *ngIf="collectionRD?.isLoading" message="{{'loading.collection' | translate}}"></ds-loading>
+
   </div>
 </div>
 
