--- a/src/themes/calypso/styles/_calypso.scss
+++ b/src/themes/calypso/styles/_calypso.scss
@@ -158,3 +158,65 @@
 a.calypso-menu {
     color: #1f7293!important;
 }
+
+
+.faq-container {
+  .accordion {
+    .card {
+      border: none !important;
+      margin-top: 10px !important;
+
+      &:hover {
+        color: #0c0000;
+        font-weight: 600;
+      }
+
+      .card-header {
+        border-radius: 0;
+        background: rgba(233, 236, 239, 0.5);
+        border-block-color: white;
+
+        // Bouton sans effet visuel au clic ou au survol
+        .btn-link {
+          text-decoration: none !important;
+          color: #343a40;
+          cursor: pointer;
+          outline: none;
+          background: none;
+          border: none;
+
+          &:focus,
+          &:active {
+            outline: none !important;
+            box-shadow: none !important;
+            background-color: transparent;
+          }
+
+          &:hover {
+            background-color: transparent !important;
+            color: inherit;
+          }
+        }
+
+      }
+
+      // Animation d'ouverture de l'accordéon
+      .collapse {
+        padding: 0px 15px;
+        margin: 5px 0;
+        width:100%!important;
+        height: 0;
+        overflow: hidden;
+        z-index: -1;
+        position: relative;
+        opacity: 0;
+        -webkit-transition: .3s ease;
+        -moz-transition: .3s ease;
+        -o-transition: .3s ease;
+        transition: .3s ease;
+      }
+    }
+  }
+
+}
+
