Section avec image, titre et barre de recherche ajustée au style des collections spéciales.

--- a/src/themes/calypso/app/home-page/home-page.component.html
+++ b/src/themes/calypso/app/home-page/home-page.component.html
@@ -1,8 +1,7 @@
-<!-- Section Hero avec image de fond -->
+<!-- Section home-page avec image de fond -->
 <div class="hero-section">
   <div class="hero-overlay">
     <h1>Les Collections <br> spéciales</h1>
-
     <!-- Barre de recherche avec filtres -->
     <div class="search-bar">
       <ds-search-form [inPlaceSearch]="false"
