--- a/src/themes/calypso/styles/_variables.scss
+++ b/src/themes/calypso/styles/_variables.scss
@@ -15,6 +15,7 @@ $body-font-family: $font-family-sans-serif;
 /* Reassign color vars to semantic color scheme */
 $blue: #2380D1 !default;
 $primary: #0b113a !default;
+$fondbase: #0b113a !default;
 $autreblue: #00407F !default;
 $lightblue: #CCE2F3;
 $extralightblue: #E5F0F8;
